# digital-xc-assignment

./: README.md  pyproject.toml
data/: Employee-List.csv
data/output/: secret_santa_assignments.csv  secret_santa_assignments_old.csv
src/: assignment_engine.py  config.py  csv_handler.py  exceptions.py  main.py  models.py  validator.py
tests/: test_assignment_engine.py  test_config.py  test_csv_handler.py  test_integration.py  test_main.py  test_models.py  test_validator.py
